fixed scrollbar issue on window computers

--- a/styles/projects.css
+++ b/styles/projects.css
@@ -3,7 +3,6 @@
   display:flex;
   flex-direction:row;
   align-items:center;
-  overflow:hidden;
   overflow-x:scroll;
   width:100%;
   height:95%;
@@ -11,7 +10,6 @@
 .project-limit{
   display:flex;
   align-items:center;
-  overflow-y:scroll;
   height:100%;
   width:100%;
 }
@@ -64,6 +62,10 @@
 .container{
 height:30%;
 }
+.project-container{
+overflow-y:scroll;
+overflow-x:hidden;
+}
 .project-limit{
 flex-direction:column;
 }
@@ -71,4 +73,5 @@ flex-direction:column;
 height:235px;
 width:235px;
 }
+   
 }
